[SYNCOPE-1658] Tabular Topology (#312)